tools/flowc/tests/errors/error48.flow
hostcall(a : flow) -> flow {
	a;
}

main() {
	if (true) {
		hostcall(1);
	} else {

	}
}
